# Fasting-Atlas

./: .cursorrules  .gitignore  Milestone3_StatusReport_OLD_vs_NEW.md  README.md  milestone.txt  p02.txt  pyproject.toml
fasting_atlas/: __init__.py  __main__.py  cli.py  consensus.py  council.py  council_align.py  council_semantic.py  eval_harness.py  extractors.py  figures.py  llm_client.py  ocr.py  output_writer.py  pdf_ingest.py  schemas.py  sections.py  tables.py
parsed_corpus_run/: 1-s2.0-0026049582900245-main-8a2d162e3432.json  1-s2.0-0026049589900474-main-e7fdbd31d6c8.json  jcem0698-a6a525d16a2f.json  jcem3646-268bddf5e09c.json  jcem4776-f70c616ff141.json  maccario-et-al-2000-short-term-fasting-abolishes-the-sex-related-difference-in-gh-and-leptin-secretion-in-humans-0ca60a543816.json  mittendorfer-et-al-2001-gender-differences-in-lipid-and-glucose-kinetics-during-short-term-fasting-6e75c5c70e5e.json  pone.0200817-843a5646e3f8.json  young-women-partition-fatty-acids-towards-ketone-body-production-rather-than-vldl-tag-synthesis-compared-with-young-men-deae7d3752b0.json
results/: CONSENSUS_IMPLEMENTATION_SUMMARY.md  evaluation_smoke_summary.json  parsed_corpus_run_evaluation.json
results/consensus_milestone_3/: mittendorfer-et-al-2001-gender-differences-in-lipid-and-glucose-kinetics-during-short-term-fasting-0d4b98205ee6.json
results/evaluation/: EVALUATION_SECTION_DRAFT.md  config_summary.json  evaluation_results.json  evaluation_summary.json  run_single_sample_summary.json
scripts/: run_baseline_evaluation.sh
scripts/eval/: gold_template.csv  run_eval.sh
(+28 files in other folders)
